# monitoring-for-modern-ai-and-mlops

./: .gitignore  README.md  config.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  tutorial.md
docs/images/: 5-gx-workflow.html
examples/evidently/: 1-evidently-getting-started.ipynb  2-evidenlty-monitor-model.ipynb  tutorial-evidently.md
examples/great_expectations/: 1-great-expectations-getting-started.ipynb
notebooks/: 2-monitor-ml-model.ipynb  3-data-drift.ipynb  4-great-expectations.ipynb  4-monitor-model-with-grafana.ipynb  Untitled.ipynb  assignment-7-monitoring.ipynb  data-drift.ipynb  data_dirft.ipynb  features_drift.html  features_drift_pvalues.html  mlflow_integration.ipynb  monitor-model.ipynb  monitor_data.ipynb  monitor_model.ipynb  test-model.ipynb  test_model.ipynb  testing_model.ipynb  train-model-kfold.ipynb  train-model.ipynb  train_model.ipynb  train_model_kfold.ipynb
notebooks/mlruns/0/: meta.yaml
src/: load_data.py  reports.py
