[project]
name = "monitoring-1-get-started"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.6"
dependencies = [
    "evidently>=0.7.5",
    "ipykernel>=6.29.5",
    "mlflow>=2.22.0",
    "pandas>=2.2.3",
    "pendulum>=3.1.0",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.11",
]
