[project]
name = "ml-monitoring-tutorial"
version = "0.1.0"
description = "Tutorial for monitoring ML models with Evidently and Grafana"
readme = "README.md"
requires-python = ">=3.11.1"
license = "MIT"
authors = [
    { name = "Mikhail Rozhkov", email = "mnrozhkov@gmail.com" }
]
dependencies = [
    "evidently>=0.7.5",
    "ipykernel>=6.29.5",
    "mlflow>=2.22.0",
    "pandas>=2.2.3",
    "pendulum>=3.1.0",
    "psycopg2-binary>=2.9.10",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.11",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["src"]

# Markdown formatting
# Note: For Markdown linting (including enforcing '-' for unordered lists),
# consider using markdownlint-cli2 or similar dedicated Markdown linters
[tool.ruff.lint.per-file-ignores]
"*.md" = ["E501"]  # Allow long lines in Markdown

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
no_implicit_reexport = true
